--- a/html/signup.html
+++ b/html/signup.html
@@ -12,18 +12,20 @@
     <header>
         <nav>
             <div class="head">
-                <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
-                <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">
-                <!-- <div class="logoAccIns"> -->
+                <div class="images">
+                    <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
+                    <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">                   
+                <!-- </div>
+                <div class="logoAccIns"> -->
                     <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
                     <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
-                <!-- </div>  -->
+                </div> 
             </div>
         </nav>
        
     </header>
  
-    <form action="signup.html" method="GET"></form>
+    <form action="signup.html" method="POST">
     <div class="bloblo">
         <div class="contenu"></div>
             <h3>Inscription</h3>
@@ -43,6 +45,7 @@
             <!-- <i class="fas fa-check"></i><input type="submit" value=" confirmation"><br><br> -->
             <a href="" class="submit_btn" style="color: black; background-color: cornsilk;">confirmer</a>
         </div>
+    </form>
 
     </div>
     <footer class="foot">
