fixing background  position

--- a/html/signup.html
+++ b/html/signup.html
@@ -15,8 +15,8 @@
                 <div class="images">
                     <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
                     <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">                   
-                <!-- </div>
-                <div class="logoAccIns"> -->
+                </div>
+                <div class="logoAccIns">
                     <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
                     <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
                 </div> 
