--- a/html/login.html
+++ b/html/login.html
@@ -10,14 +10,21 @@
 
 </head>
 <body>
-    <div class="head">
-        <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
-        <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">
-        <div class="logoAccIns">
-            <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
-            <a href="signup.html" title="inscription"><i class="fas fa-user-plus"></i></a>
-        </div> 
-    </div>
+    <header>
+        <nav>
+            <div class="head">
+                <div class="images">
+                    <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
+                    <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">                   
+                </div>
+                <div class="logoAccIns">
+                    <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
+                    <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
+                </div> 
+            </div>
+        </nav>
+       
+    </header>
    
     <form action="login.html" method="POST">
         <div class="blabla">
@@ -31,10 +38,10 @@
     </form>
     <footer class="foot">
         <div class="sos">
-            <a href="https://www.facebook.com/Fablab-universiapolis-112455204432836" style="color: blue;"><i class="fab fa-facebook-f fa-3x"></i></a>
-            <a href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-3x"></i></a>
-            <a href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-3x"></i></a>
-            <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox/FMfcgzGkZGgXndMWzdXVmSXcrqFHJcQh?compose=NZVHGDkxmRTPQTXQQGWqdkpZxXdVqNPTmFPcxBHCCWZPztzlfsqQTqwkTNbrhgnLnVKSwL" style="color: whitesmoke;"><i class="fas fa-envelope fa-3x"></i></a>
+            <a  target="_blank" href="https://www.facebook.com/Fablab-universiapolis-112455204432836"  style="color: blue;"><i class="fab fa-facebook-f fa-3x"></i></a>
+            <a target="_blank" href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-3x"></i></a>
+            <a target="_blank" href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-3x"></i></a>
+            <a target="_blank" href="https://mail.google.com/mail/u/0/?tab=wm#inbox/FMfcgzGkZGgXndMWzdXVmSXcrqFHJcQh?compose=NZVHGDkxmRTPQTXQQGWqdkpZxXdVqNPTmFPcxBHCCWZPztzlfsqQTqwkTNbrhgnLnVKSwL" style="color: whitesmoke;"><i class="fas fa-envelope fa-3x"></i></a>    
         </div>
       </footer> 
 </body>
