--- a/html/login.html
+++ b/html/login.html
@@ -23,15 +23,15 @@
                 </div> 
             </div>
         </nav>
-       
     </header>
    
     <form action="login.html" method="POST">
         <div class="blabla">
             <div class = "contenu">
-                <h1 class="log">connexion</h1>
+                <h3>connexion</h3>
                 <i class="fas fa-user"></i><input type="text" placeholder="username" required><br><br>
-                <i class="fas fa-lock"></i><input type="password" placeholder="password" required>
+                <i class="fas fa-lock"></i><input type="password" placeholder="password" required><br><br>
+                <a href="" class="submit_btn" style="color: black; background-color: cornsilk;">confirmer</a>
             </div>
             
         </div>
