--- a/html/signup.html
+++ b/html/signup.html
@@ -28,7 +28,7 @@
     <form action="signup.html" method="POST">
     <div class="bloblo">
         <div class="contenu"></div>
-            <h3>Inscription</h3>
+            <h3>Inscription test</h3>
             <i class="fas fa-user"></i><input type="text" placeholder="name"><br><br>
             <i class="fas fa-users"></i><input type="text" placeholder="family name"><br><br>
             <i class="fas fa-user-tie"></i><select name="profession" id=" profession_select">
