13/07/2021 modifi sur les fichier pour eviter le spaghtty code , comments added.

--- a/html/login.html
+++ b/html/login.html
@@ -19,14 +19,14 @@
                 </div>
                 <div class="logoAccIns">
                     <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
-                    <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
+                    <a href="signup.html" title="inscription"></i><i class="fas fa-user-plus" id="fuckinglogo"></i></a>
                 </div> 
             </div>
         </nav>
     </header>
    
     <form action="login.html" method="POST">
-        <div class="blabla">
+        <div class="boxlog">
             <div class = "contenu">
                 <h3>connexion</h3>
                 <i class="fas fa-user"></i><input type="text" placeholder="username" required><br><br>
@@ -37,7 +37,7 @@
         </div>
     </form>
     <footer class="foot">
-        <div class="sos">
+        <div class="sociallogo">
             <a  target="_blank" href="https://www.facebook.com/Fablab-universiapolis-112455204432836"  style="color: blue;"><i class="fab fa-facebook-f fa-3x"></i></a>
             <a target="_blank" href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-3x"></i></a>
             <a target="_blank" href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-3x"></i></a>
