--- a/html/signup.html
+++ b/html/signup.html
@@ -26,7 +26,7 @@
     </header>
  
     <form action="signup.html" method="POST">
-    <div class="bloblo">
+    <div class="boxsign">
         <div class="contenu"></div>
             <h3>Inscription</h3>
             <i class="fas fa-user"></i><input type="text" placeholder="name"><br><br>
@@ -49,7 +49,7 @@
 
     </div>
     <footer class="foot">
-        <div class="sos">
+        <div class="sociallogo">
             <a  target="_blank" href="https://www.facebook.com/Fablab-universiapolis-112455204432836"  style="color: blue;"><i class="fab fa-facebook-f fa-3x"></i></a>
             <a target="_blank" href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-3x"></i></a>
             <a target="_blank" href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-3x"></i></a>
