13/07/2021 duplicate updated styling in loging file

--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="logoAccIns">
                     <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
-                    <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
+                    <a href="signup.html" title="connexion"><i class="fas fa-user-plus" id="fuckinglogo"></i></a>
                 </div> 
             </div>
         </nav>
@@ -27,17 +27,18 @@
     </header>
    
     <form action="login.html" method="POST">
-        <div class="blabla">
-            <div class = "contenu">
-                <h1 class="log">connexion</h1>
-                <i class="fas fa-user"></i><input type="text" placeholder="username" required><br><br>
-                <i class="fas fa-lock"></i><input type="password" placeholder="password" required>
+        <div class="boxlog">
+            <div class = "contenu" style="display: flex; flex-direction: column; padding-bottom: 5px;">
+                <h3>connexion</h3>
+                <input type="text" placeholder="username" required>
+                <input type="password" placeholder="password" required>
+                <input type="submit" value="confirmer" >
             </div>
             
         </div>
     </form>
     <footer class="foot">
-        <div class="sos">
+        <div class="sociallogo">
             <a  target="_blank" href="https://www.facebook.com/Fablab-universiapolis-112455204432836"  style="color: blue;"><i class="fab fa-facebook-f fa-3x"></i></a>
             <a target="_blank" href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-3x"></i></a>
             <a target="_blank" href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-3x"></i></a>
