--- a/html/acceuil.html
+++ b/html/acceuil.html
@@ -6,34 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="/css/acceuil.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/css/repeatedstyling.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
-
-<body>
-    <img src="/image/uni.png" alt="" class="img1">
-    <div class="logsign">
-      <a href=""> <i class="fas fa-sign-in-alt"></i>connexion</a>
-      <a href=""> <i class="fas fa-user-plus"></i>inscription</a>
+<body class="homebody">
+  <header>
+    <nav>
+      <div class="head">
+                <div class="images">
+                    <img src="/image/uniimag.png" alt="uniimag.png" class="imguni">
+                    <img src="/image/fabimg.png" alt="fabimg.png" class="imgfab">                   
+                </div>
+                <div class="logoAccIns">
+                    <a href="acceuil.html" title="acceuil"><i class="fas fa-home"></i></a>
+                    <a href="login.html" title="connexion"><i class="fas fa-sign-in-alt" id="fuckinglogo"></i></a>
+                </div> 
+            </div>
+    </nav>
+    <div class = presenting>
+      <h1>Fablab</h1>
+      <a href=""><img src="/image/fab2.JPG" alt="fabimg"></a>
     </div>
-        <div class="split left">
-            <div class="centered">
-                <h2 style="color: red;" >reservation</h2>
-              <p>Some text.</p>
-            </div>
-          </div>
-          
-          <div class="split right">
-            <div class="centered">
-              <h2 >Disponibilite</h2>
-              <p>Some text here too.</p>
-            </div>
-          </div>
-          <footer class="foot">
-            <a href="https://www.facebook.com/Fablab-universiapolis-112455204432836" style="color: blue;"><i class="fab fa-facebook-f fa-4x"></i></a>
-            <a href="" style="color: cornflowerblue;"><i class="fab fa-twitter fa-4x"></i></a>
-            <a href="https://www.instagram.com/fablab_universiapolis/" style="color: rgb(157, 91, 170);"><i class="fab fa-instagram fa-4x"></i></a>
-            <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox/FMfcgzGkZGgXndMWzdXVmSXcrqFHJcQh?compose=NZVHGDkxmRTPQTXQQGWqdkpZxXdVqNPTmFPcxBHCCWZPztzlfsqQTqwkTNbrhgnLnVKSwL" style="color: whitesmoke;"><i class="fas fa-envelope fa-4x"></i></a>
-          </footer> 
+  </header>      
 </body>
 </html>
