--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/repeatedstyling.css">
     <script src="https://kit.fontawesome.com/49cf97bcc7.js" crossorigin="anonymous"></script>
 
 </head>
