--- a/html/signup.html
+++ b/html/signup.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <title>Document</title>
     <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/repeatedstyling.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
